add recipes in index to list and add hotdog recipe

--- a/recipes/hotdog.html
+++ b/recipes/hotdog.html
@@ -6,13 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/hotdog.html">Hot Dog</a></li>
+    <h1>Hot Dog</h1>
 
-    </ul>
+
     
-
 </body>
 </html>
